--- a/report.html
+++ b/report.html
@@ -7,7 +7,7 @@
  <body> 
 <h1>Отчёты ФФ</h1>
 
- <iframe src="https://grafana.o3.ru/d/8NH1VaX7z/fbo_62_sendzone?orgId=1&var-Warehouse_name=%D0%90%D0%9B%D0%9C%D0%90%D0%A2%D0%AB_%D0%9C%D0%A0%D0%A4%D0%A6&var-type=All&var-shift_type=All&var-EmployeeName=All&var-regionalcluster=All" id="myframe" style="position:absolute; top:10%; left:0px; bottom:0px; right:0px; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
+ <iframe src="http://sre-bot.sre.prod.s.o3.ru/?https://grafana.o3.ru/d/8NH1VaX7z/fbo_62_sendzone?orgId=1&var-Warehouse_name=%D0%90%D0%9B%D0%9C%D0%90%D0%A2%D0%AB_%D0%9C%D0%A0%D0%A4%D0%A6&var-type=All&var-shift_type=All&var-EmployeeName=All&var-regionalcluster=All" id="myframe" style="position:absolute; top:10%; left:0px; bottom:0px; right:0px; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
     Your browser doesn't support iframes
 </iframe> 
 
