--- a/report.html
+++ b/report.html
@@ -2,7 +2,7 @@
 <html lang="ru">
  <head>
   <meta charset="utf-8">
-  <title>IFRAME</title>
+  <title>Отчёты ФФ</title>
  </head>
  <body> 
 <h1>Отчёты ФФ</h1>
