--- a/report.html
+++ b/report.html
@@ -2,6 +2,7 @@
 <html lang="ru">
  <head>
   <meta charset="utf-8">
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <title>Отчёты на ФФ</title>
  </head>
  <body> 
