--- a/report.html
+++ b/report.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="utf-8">
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-  <title>Отчёты на ФФ</title>
+  <title>Отчёты  ФФ</title>
  </head>
  <body> 
 <h1>Отчёты ФФ</h1>
