--- a/report.html
+++ b/report.html
@@ -2,15 +2,19 @@
 <html lang="ru">
  <head>
   <meta charset="utf-8">
-  <title>Отчёты ФФ</title>
+  <title>Отчёты на ФФ</title>
  </head>
  <body> 
-<h1>Отчёты ФФ</h1>
+<h1>Отчёты на ФФ</h1>
 
- <iframe src="https://l.o3.ru/t/QdKQRW" id="myframe" style="position:absolute; top:10%; left:0px; bottom:0px; right:0px; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
-    Your browser doesn't support iframes
-</iframe> 
+  //iframe
+ <embed  src="https://l.o3.ru/t/QdKQRW" id="myframe" style="position:absolute; top:10%; left:0px; bottom:0px; right:0px; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
+    Your browser doesn't support embed
+</embed > 
 
+
+
+  
 
 <script src="main.js"></script>
 
