--- a/report.html
+++ b/report.html
@@ -2,7 +2,7 @@
 <html lang="ru">
  <head>
   <meta charset="utf-8">
-  <title>Отчёты на ФФ</title>
+  <title>Отчёты</title>
  </head>
  <body> 
 <h1></h1>
