--- a/report.html
+++ b/report.html
@@ -2,6 +2,7 @@
 <html lang="ru">
  <head>
   <meta charset="utf-8">
+  <script src="main.js"></script>
   <title>Отчёты ФФ</title>
  </head>
  <body> 
